appId: com.google.android.keep
---
- runFlow: ../../welcome/flows/skipWelcomePage.yaml
- runScript: ../../homepage/scripts/homepage.js
- runScript: ../scripts/createnote.js
- tapOn:
    id: ${output.homepage.newNote}
- hideKeyboard
- tapOn:
    id: ${output.createnote.noteTitle}
- inputText: "Pinned test title"
- hideKeyboard
- tapOn:
    id: ${output.createnote.noteText}
- inputText: "Pinned test note"
- hideKeyboard
- tapOn:
    id: "com.google.android.keep:id/menu_pin"
- tapOn: "Navigate up"
- assertVisible:
    id: com.google.android.keep:id/header_text
    index: 0
    text: "Pinned"
- assertVisible: 
    id: "com.google.android.keep:id/index_note_text_description"
    index: 0
    text: "Pinned test note"
- stopApp